--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,20 @@
-.profile-container{
-    height: 100vw;
-    display: flex;
-    justify-content: center;
+* {
+  cursor: url(../public/SVG/Risorsa\ 1.svg), auto;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
 }
-.profile-card{
-    border: 2px solid black;
-    padding: 20px;
-    height: 620px ;
+a {
+  cursor: url(../public/SVG/Risorsa\ 1.svg), pointer;
+}
+
+.profile-container {
+  height: 100vw;
+  display: flex;
+  justify-content: center;
+}
+.profile-card {
+  border: 2px solid black;
+  padding: 20px;
+  height: 620px;
 }
