--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,10 @@ a {
   font-family: "Montserrat", sans-serif;
 }
 .profile-container {
-  height: 100vw;
+  height: 760px ;
   display: flex;
   justify-content: center;
-  border-radius: 15px;
+  
   
 }
 .profile-card {
